# congress-data-harvester

./: .gitignore  .replit  API.md  API_DOCS.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  EXPORT_DOCUMENTATION.md  IMPROVEMENTS.md  LICENSE  README.md  ROADMAP.md  SCHEMA.md  api_server.py  config.json  congress_api.py  congress_api.py.bak.20250227005400  congress_api.py.bak.20250227011337  congress_downloader.py  data_validator.py  dynamo_handler.py  export_data.py  fix_broken_api.py  fix_bugs.py  fix_duplicates.py  fix_import_issues.py  health_check.py  logger_config.py  monitoring.py  pyproject.toml  required_permissions.md  run_fix_bugs.py  simplified_congress_api.py  simplified_health_check.py  test_committee_data.py  test_dynamo.py  utils.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
attached_assets/: Pasted-Making-Congress-Data-Downloader-Open-Source-Ready-Based-on-the-improvements-we-ve-already-made-here-1740610693870.txt  gpo_congress_gov.md
exports/: .gitkeep  bill_20250227010348.json  committee_20250227010358.csv
logs/: .gitkeep
static/: swagger.json
